$Id: History,v 1.45 2001-11-19 12:25:49 johna Exp $
--------------------------------------------------

     =========================================================
     Geant4 - an Object-Oriented Toolkit for Simulation in HEP
     =========================================================

                    Example N03 History file
                    ------------------------
This file should be used by the G4 example coordinator to briefly
summarize all major modifications introduced in the code and keep
track of all tags.

     ----------------------------------------------------------
     * Reverse chronological order (last date on top), please *
     ----------------------------------------------------------

19-11-01 John (exampleN03-V03-02-06)
- Updated ExN03VisManager.cc for new graphics systems and defaults.

14-11-01 Satoshi Tanaka (exampleN03-V03-02-05)
- exN03Vis8.mac : Batch visualization with the DAWNFILE driver
- exN03Vis9.mac : Multi-page PostScript file generation (old exN03Vis8.mac)

07-11-01 Satoshi (exampleN03-V03-02-04a)
- /vis/viewer/viewpointThetaPhi ==> /vis/viewer/set/viewpointThetaPhi

07-11-01 Satoshi (exampleN03-V03-02-04)
- visTutor/exN03VisXX.mac's are rewritten with /vis/viewer/flush.
- Some refinements of command sequences and comments.
- Note that /vis/flushAll's are described but commented out. 

07-11-01 Satoshi (exampleN03-V03-02-03)
- vis.mac: /vis/viewer/refresh + /vis/viewer/update is replaced 
  with their equivalent command /vis/viewer/flush.
     
24-10-01 mma (exampleN03-V03-02-02)
- initInter.mac renamed vis.mac : OpenGL and DAWNFILE opened simultaneously. 
     
19-10-01 Steve O'Neale (examples-V03-02-00)
- Update reference output

10-10-01 mma (exampleN03-V03-02-01)
- /vis/scene/endOfEventAction accumulate
  /vis/viewer/zoom (in newgeom.mac)
- 80 columns everywhere

18-09-01 Satoshi Tanaka (exampleN03-V03-02-00)
- Updation for automatic visualization at Hebden Bridge mini-workshop.