@@ -1,4 +1,4 @@
-$Id: History,v 1.45 2001-11-19 12:25:49 johna Exp $
+$Id: History,v 1.46 2001-11-27 11:10:31 maire Exp $
 --------------------------------------------------
 
      =========================================================
@@ -14,6 +14,10 @@ track of all tags.
      ----------------------------------------------------------
      * Reverse chronological order (last date on top), please *
      ----------------------------------------------------------
+     
+27-11-01 mma (exampleN03-V03-02-07)
+- DetectorConstruction: Vacuum is the default material.
+- newgeom.mac: a box of 40 cm of water.
 
 19-11-01 John (exampleN03-V03-02-06)
 - Updated ExN03VisManager.cc for new graphics systems and defaults.
